--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NhaHangDB": "Data Source=DESKTOP-TGR776I;Database=QLWebDBNH;Integrated Security=True;TrustServerCertificate=True;User Id=sa;Password=123456789",
+    "NhaHangDB": "Data Source=DESKTOP-TGR776I;Database=QLWebDBNH;Integrated Security=True;TrustServerCertificate=True",
     "BTLONKY5Context": "Server=(localdb)\\mssqllocaldb;Database=BTLONKY5Context-db43a7a6-aef1-417a-aa21-460789aaf959;User Id=sa;Password=123456789;TrustServerCertificate=True;Integrated Security=True"
 
 
